--- a/cloud-formation.yaml
+++ b/cloud-formation.yaml
@@ -40,18 +40,21 @@ Parameters:
     Type: String
     Description: Private key for encrypting user sessions.
     MinLength: '50'
+    NoEcho: true
   SentryGithubAppId:
     Description: GitHub API App ID for SSO
     Type: String
   SentryGithubApiSecret:
     Description: GitHub API secret key for SSO
     Type: String
+    NoEcho: true
   SentryMailUsername:
     Description: SMTP username for sentry to use to send email
     Type: String
   SentryMailPassword:
     Description: SMTP password for sentry to use to send email
     Type: String
+    NoEcho: true
   SentryMailFrom:
     Description: Sending email address for sentry to use to send email
     Type: String
@@ -364,6 +367,218 @@ Resources:
       NatGatewayId:
         Ref: NAT2
 
+  ###### Roles ######
+
+  RootEncryptionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              AWS: "*"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - lambda.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      Path: "/"
+      Policies:
+      - PolicyName: root
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - logs:*
+            Resource: arn:aws:logs:*:*:*
+
+  SentryRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: "/"
+      Policies:
+        - PolicyName: root
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:PutObject
+                  - s3:GetObject
+                  - s3:DeleteObject
+                Resource:
+                  - Fn::Join:
+                    - ''
+                    - - !GetAtt SentryFilesS3Bucket.Arn
+                      - "/*"
+
+  ###### Encryption ######
+
+  SentryEncryptionKey:
+    Type: "AWS::KMS::Key"
+    Properties: 
+      Description: Sentry environment root encryption key
+      KeyPolicy: 
+        Version: "2012-10-17"
+        Statement: 
+          - Sid: "Enable IAM User Permissions"
+            Effect: "Allow"
+            Principal:
+              AWS:
+                Fn::Join:
+                  - ''
+                  - ['arn:aws:iam::', {Ref: 'AWS::AccountId'}, ':root']
+            Action: "kms:*"
+            Resource: "*"
+          - Sid: "Allow administration of the key"
+            Effect: "Allow"
+            Principal: 
+              AWS:
+                - !GetAtt RootEncryptionRole.Arn
+            Action: 
+              - "kms:Create*"
+              - "kms:Describe*"
+              - "kms:Enable*"
+              - "kms:List*"
+              - "kms:Put*"
+              - "kms:Update*"
+              - "kms:Revoke*"
+              - "kms:Disable*"
+              - "kms:Get*"
+              - "kms:Delete*"
+              - "kms:TagResource"
+              - "kms:UntagResource"
+              - "kms:ScheduleKeyDeletion"
+              - "kms:CancelKeyDeletion"
+            Resource: "*"
+          - Sid: "Allow use of the key"
+            Effect: "Allow"
+            Principal:
+              AWS:
+                - !GetAtt LambdaExecutionRole.Arn
+                - !GetAtt SentryRole.Arn
+            Action: 
+              - "kms:Encrypt"
+              - "kms:Decrypt"
+              - "kms:ReEncrypt*"
+              - "kms:GenerateDataKey*"
+              - "kms:DescribeKey"
+            Resource: "*"
+
+  SentryEncryptionKeyAlias:
+    Type: AWS::KMS::Alias
+    Properties:
+      AliasName:
+        Fn::Join:
+          - ''
+          - ['alias/', {Ref: 'AWS::StackName'}]
+      TargetKeyId:
+        Ref: SentryEncryptionKey
+
+  EncryptionHelperFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Handler: index.lambda_handler
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Code:
+        ZipFile: !Sub |
+          import base64
+          import uuid
+          import httplib
+          import urlparse
+          import json
+          import boto3
+
+          def send_response(request, response, status=None, reason=None):
+              """ Send our response to the pre-signed URL supplied by CloudFormation
+
+              If no ResponseURL is found in the request, there is no place to send a
+              response. This may be the case if the supplied event was for testing.
+              """
+
+              if status is not None:
+                  response['Status'] = status
+
+              if reason is not None:
+                  response['Reason'] = reason
+
+              if 'ResponseURL' in request and request['ResponseURL']:
+                  url = urlparse.urlparse(request['ResponseURL'])
+                  body = json.dumps(response)
+                  https = httplib.HTTPSConnection(url.hostname)
+                  https.request('PUT', url.path+'?'+url.query, body)
+
+              return response
+
+          def lambda_handler(event, context):
+
+              response = {
+                  'StackId': event['StackId'],
+                  'RequestId': event['RequestId'],
+                  'LogicalResourceId': event['LogicalResourceId'],
+                  'Status': 'SUCCESS'
+              }
+
+              # PhysicalResourceId is meaningless here, but CloudFormation requires it
+              if 'PhysicalResourceId' in event:
+                  response['PhysicalResourceId'] = event['PhysicalResourceId']
+              else:
+                  response['PhysicalResourceId'] = str(uuid.uuid4())
+
+              # There is nothing to do for a delete request
+              if event['RequestType'] == 'Delete':
+                  return send_response(event, response)
+
+              # Encrypt the value using AWS KMS and return the response
+              try:
+
+                  for key in ['KeyId', 'PlainText']:
+                      if key not in event['ResourceProperties'] or not event['ResourceProperties'][key]:
+                          return send_response(
+                              event, response, status='FAILED',
+                              reason='The properties KeyId and PlainText must not be empty'
+                          )
+
+                  client = boto3.client('kms')
+                  encrypted = client.encrypt(
+                      KeyId=event['ResourceProperties']['KeyId'],
+                      Plaintext=event['ResourceProperties']['PlainText']
+                  )
+
+                  response['Data'] = {
+                      'CipherText': base64.b64encode(encrypted['CiphertextBlob'])
+                  }
+                  response['Reason'] = 'The value was successfully encrypted'
+
+              except Exception as E:
+                  response['Status'] = 'FAILED'
+                  response['Reason'] = 'Encryption Failed - See CloudWatch logs for the Lamba function backing the custom resource for details'
+
+              return send_response(event, response)
+      Runtime: python2.7
+
   ###### Redis ######
   RedisAccessSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -473,6 +688,8 @@ Resources:
       DBName:
         Ref: DBName
       Engine: postgres
+      KmsKeyId:
+        Ref: SentryEncryptionKey
       MasterUsername:
         Ref: DBMasterUsername
       MasterUserPassword:
@@ -490,14 +707,6 @@ Resources:
         Ref: PostgresSubnetGroup
 
   ###### File Storage ######
-  SentryFilesUser:
-    Type: AWS::IAM::User
-
-  SentryFilesUserKey:
-    Type: AWS::IAM::AccessKey
-    Properties:
-      UserName:
-        Ref: SentryFilesUser
 
   SentryFilesS3Bucket:
     Type: AWS::S3::Bucket
@@ -511,25 +720,8 @@ Resources:
           - "-sentry-files"
       AccessControl: Private
 
-  SentryFilesS3BucketPolicy:
-    Type: AWS::S3::BucketPolicy
-    Properties:
-      Bucket:
-        Ref: SentryFilesS3Bucket
-      PolicyDocument: 
-        Statement: 
-          - Action: "*"
-            Effect: "Allow"
-            Resource:
-              Fn::Join:
-              - ''
-              - - !GetAtt SentryFilesS3Bucket.Arn
-                - "/*"
-            Principal:
-              AWS:
-                !GetAtt SentryFilesUser.Arn
-
   ###### App Server ######
+
   LoadBalancerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -610,6 +802,13 @@ Resources:
         UnhealthyThreshold: 10
         Target: HTTPS:443/_health/
 
+  SentryInstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      Path: "/"
+      Roles:
+        - Ref: SentryRole
+
   SentrySecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -629,6 +828,46 @@ Resources:
               - '-'
               - [{Ref: 'AWS::StackName'}, 'Sentry']
 
+  EncryptedDeploymentHosts:
+    Type: AWS::CloudFormation::CustomResource
+    Version: "1.0"
+    Properties:
+      ServiceToken: !GetAtt EncryptionHelperFunction.Arn
+      KeyId:
+        Ref: SentryEncryptionKey
+      PlainText:
+        !Sub
+        - |
+          [aws]
+          127.0.0.1
+
+          [aws:vars]
+          user=ubuntu
+          is_local=false
+          sentry_admin_username="${SentryAdminUser}"
+          sentry_admin_password="${SentryAdminPassword}"
+          sentry_public_dns_name="${SentryPublicDnsName}"
+          sentry_secret_key="${SentrySecretKey}"
+          sentry_github_app_id="${SentryGithubAppId}"
+          sentry_github_api_secret="${SentryGithubApiSecret}"
+          sentry_url="${SentryUrl}"
+          sentry_db_host="${DBHost}"
+          sentry_db_port="5432"
+          sentry_db_name="${DBName}"
+          sentry_db_user="${DBMasterUsername}"
+          sentry_db_password="${DBMasterUserPassword}"
+          sentry_redis_host="${RedisHost}"
+          sentry_redis_port="6379"
+          sentry_mail_host="${SentryMailHost}"
+          sentry_mail_port="${SentryMailPort}"
+          sentry_mail_username="${SentryMailUsername}"
+          sentry_mail_password="${SentryMailPassword}"
+          sentry_mail_from="${SentryMailFrom}"
+          sentry_files_bucket_name="${AWS::AccountId}-${AWS::StackName}-sentry-files"
+        - SentryUrl: !GetAtt SentryElasticLoadBalancer.DNSName
+          DBHost: !GetAtt PostgresInstance.Endpoint.Address
+          RedisHost: !GetAtt RedisCacheCluster.RedisEndpoint.Address
+
   SentryLaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
@@ -642,11 +881,8 @@ Resources:
       - Ref: RedisAccessSecurityGroup
       InstanceType:
         Ref: InstanceType
-      BlockDeviceMappings:
-      - DeviceName: "/dev/sda1"
-        Ebs:
-          VolumeSize: '10'
-          Encrypted: 'true'
+      IamInstanceProfile: 
+        Ref: SentryInstanceProfile
       UserData:
         Fn::Base64:
           !Sub
@@ -654,15 +890,16 @@ Resources:
             #cloud-config
             runcmd:
             - apt-get update
-            - apt-get install ansible -y
+            - apt-get install ansible awscli -y
             - openssl req -new -nodes -x509 -subj "/C=GB/ST=London/L=London/O=Private/CN=${AWS::StackName}" -days 3650 -keyout /tmp/server.key -out /tmp/bundle.crt -extensions v3_ca
             - curl https://github.com/o2Labs/sentry-formation/archive/master.zip --output /tmp/repo.zip --location
             - tar -xzvf /tmp/repo.zip -C /tmp/
-            - SENTRY_ADMIN_USER=${SentryAdminUser} SENTRY_ADMIN_PASSWORD=${SentryAdminPassword} SENTRY_PUBLIC_DNS_NAME=${SentryPublicDnsName} SENTRY_SECRET_KEY=${SentrySecretKey} SENTRY_GITHUB_APP_ID=${SentryGithubAppId} SENTRY_GITHUB_API_SECRET=${SentryGithubApiSecret} SENTRY_MAIL_HOST=${SentryMailHost} SENTRY_MAIL_PORT=${SentryMailPort} SENTRY_MAIL_USERNAME=${SentryMailUsername} SENTRY_MAIL_PASSWORD=${SentryMailPassword} SENTRY_MAIL_FROM=${SentryMailFrom} SENTRY_FILES_ACCESS_KEY=${SentryFilesUserKey} SENTRY_FILES_SECRET_KEY=${SentryFilesSecretAccessKey} SENTRY_FILES_BUCKET_NAME=${AWS::AccountId}-${AWS::StackName}-sentry-files SENTRY_URL=${SentryUrl} SENTRY_DB_HOST=${DBHost} SENTRY_DB_PORT=5432 SENTRY_DB_NAME=${DBName} SENTRY_DB_USER=${DBMasterUsername} SENTRY_DB_PASSWORD=${DBMasterUserPassword} SENTRY_REDIS_HOST=${RedisHost} SENTRY_REDIS_PORT=6379 ansible-playbook /tmp/sentry-formation-master/deployment/site.yml -i /tmp/sentry-formation-master/deployment/deployment_hosts --limit local_sentry
-          - SentryFilesSecretAccessKey: !GetAtt SentryFilesUserKey.SecretAccessKey
-            SentryUrl: !GetAtt SentryElasticLoadBalancer.DNSName
-            DBHost: !GetAtt PostgresInstance.Endpoint.Address
-            RedisHost: !GetAtt RedisCacheCluster.RedisEndpoint.Address
+            - echo "${DeploymentHosts}" > /tmp/deployment_hosts.base64
+            - base64 -d /tmp/deployment_hosts.base64 > /tmp/deployment_hosts.encrypted
+            - aws kms decrypt --region ${AWS::Region} --ciphertext-blob "fileb:///tmp/deployment_hosts.encrypted" --output text --query Plaintext > /tmp/deployment_hosts.decrypted
+            - base64 -d /tmp/deployment_hosts.decrypted > /tmp/deployment/deployment_hosts
+            - ansible-playbook /tmp/deployment/site.yml -i /tmp/deployment/deployment_hosts --limit aws
+          - DeploymentHosts: !GetAtt EncryptedDeploymentHosts.CipherText
 
   SentryAutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
