--- a/deployment/deployment_hosts.example
+++ b/deployment/deployment_hosts.example
@@ -7,6 +7,7 @@ is_local=true
 sentry_admin_username="sentryadmin"
 sentry_admin_password="CHANGE_ME"
 sentry_url="sentry.example.com"
+owner="Your Company Name"
 sentry_db_host="localhost"
 sentry_db_port="5432"
 sentry_db_name="sentry"
