--- a/deployment/roles/nginx/tasks/main.yml
+++ b/deployment/roles/nginx/tasks/main.yml
@@ -16,20 +16,21 @@
     - Restart nginx
   tags: nginx
 
-# Create SSL Cert Dir
 - name: create ssl directory
   file: path=/etc/nginx/ssl state=directory
-  when: "{{is_local}} == false"
   notify:
     - Restart nginx
   tags: nginx
 
-- name: move and change ssl permissions for bundle and server.key
-  when: "{{is_local}} == false"
-  copy:
-    remote_src: true
-    src: /tmp/{{ item }}
-    dest: /etc/nginx/ssl/{{ item }}
+- name: create self-signed SSL cert
+  command: 'openssl req -new -nodes -x509 -subj "/O={{owner}}/CN={{ansible_fqdn}}" -days 3650 -keyout /etc/nginx/ssl/server.key -out /etc/nginx/ssl/bundle.crt -extensions v3_ca creates=/etc/nginx/ssl/bundle.crt'
+  notify:
+    - Restart nginx
+  tags: nginx
+
+- name: set SSL cert permissions
+  file:
+    path: /etc/nginx/ssl/{{ item }}
     owner: "{{ user }}"
     group: "{{ user }}"
     mode: 0755
