--- a/site.yml
+++ b/site.yml
@@ -25,8 +25,7 @@
     - redis_server
     - python
     - nginx
-    - postgres_install
-    - postgres_db
+    - postgres
     - supervisor
     - sentry
   gather_facts: false
