Move nginx into sentry role

--- a/roles/sentry/handlers/main.yml
+++ b/roles/sentry/handlers/main.yml
@@ -1,2 +1,6 @@
 - name: reload supervisor
   shell: supervisorctl reload
+
+- name: Restart nginx
+  service: name=nginx
+           state=restarted
