--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -269,15 +269,15 @@
     - cis_cat_security
     - ufw
 
-- name: Ensure MOTD does not allow group write access
-  file: path=/etc/motd state=touch owner=root group=root mode=644
+- name: Create MOTD on issue.net
+  template: src=motd_banner.j2 dest=/etc/issue.net owner=root group=root mode=644
   become: true
   tags:
     - cis_cat_security
     - motd
 
-- name: Create MOTD on issue.net
-  template: src=motd_banner.j2 dest=/etc/issue.net owner=root group=root mode=644
+- name: Create MOTD on motd
+  template: src=motd_banner.j2 dest=/etc/motd owner=root group=root mode=644
   become: true
   tags:
     - cis_cat_security
