Add non-internet-facing variation of templates
- TODO: The NAT gateway refers to the public subnet groups ... what do we need to change here?

--- a/output/sentry-formation-internal-2az.yaml
+++ b/output/sentry-formation-internal-2az.yaml
@@ -1,6 +1,7 @@
-Description: <%= @Description %>
+# This file was generated with lono. Do not edit directly, the changes will be lost.
+# More info: https://github.com/tongueroo/lono
+Description: Sentry.io internal setup across 2 availability zones
 Parameters:
-
   #### Required ####
   Owner:
     Type: String
@@ -61,35 +62,30 @@ Parameters:
   SentryMailFrom:
     Description: Sending email address for sentry to use to send email
     Type: String
-
   #### Optional ####
   VpcCidr:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
     Description: VPC Cidr block
     Default: 10.0.0.0/22
     Type: String
-<% for @num in 1..@availability_zones -%>
-  VpcAvailabilityZone<%= @num %>:
-    Description: The AvailabilityZone to use for subnet <%= @num %>
+  VpcAvailabilityZone1:
+    Description: The AvailabilityZone to use for subnet 1
     Type: AWS::EC2::AvailabilityZone::Name
-    Default: eu-west-1<%= (@num + 96).chr %>
-<% end -%>
-<% if @visibility === "internet-facing" -%>
-<% for @num in 1..@availability_zones -%>
-  VpcPublicSubnetCIDR<%= @num %>:
+    Default: eu-west-1a
+  VpcAvailabilityZone2:
+    Description: The AvailabilityZone to use for subnet 2
+    Type: AWS::EC2::AvailabilityZone::Name
+    Default: eu-west-1b
+  VpcPrivateSubnetCIDR1:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
-    Default: 10.0.<%= ((@num - 1) / 2).floor  %>.<%= (@num - 1) * 64 % 128  %>/26
-    Description: VPC CIDR Block for Public Subnet <%= @num %>
+    Default: 10.0.2.0/26
+    Description: VPC CIDR Block for Private Subnet 1
     Type: String
-<% end -%>
-<% end -%>
-<% for @num in 1..@availability_zones -%>
-  VpcPrivateSubnetCIDR<%= @num %>:
+  VpcPrivateSubnetCIDR2:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
-    Default: 10.0.<%= ((@num + 3) / 2).floor  %>.<%= (@num - 1) * 64 % 128  %>/26
-    Description: VPC CIDR Block for Private Subnet <%= @num %>
+    Default: 10.0.2.64/26
+    Description: VPC CIDR Block for Private Subnet 2
     Type: String
-<% end -%>
   ImageId:
     Description: The AMI to use for this Sentry - YUM compliant required
     Type: String
@@ -117,7 +113,7 @@ Parameters:
     Default: db.t2.small
   DBMultiAZ:
     Type: String
-    Default: <%= @availability_zones > 1 %>
+    Default: true
     Description: Provides enhanced availablily for RDS
   DBStorageType:
     Type: String
@@ -148,7 +144,6 @@ Parameters:
     Type: Number
     Description: Maximum size of the auto scaling group
     Default: 2
-
 AWSTemplateFormatVersion: '2010-09-09'
 Resources:
   ###### Network ######
@@ -162,41 +157,32 @@ Resources:
         - Key: Name
           Value:
             Ref: AWS::StackName
-
-<% if @visibility === "internet-facing" -%>
-<% for @num in 1..@availability_zones -%>
-  PublicSubnet<%= @num %>:
+  PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: {Ref: VpcAvailabilityZone<%= @num %>}
-      CidrBlock: {Ref: VpcPublicSubnetCIDR<%= @num %>}
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value:
-            Fn::Join:
-              - '-'
-              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone<%= @num %>}]
-      VpcId: {Ref: VPC}
-<% end -%>
-<% end -%>
-
-<% for @num in 1..@availability_zones -%>
-  PrivateSubnet<%= @num %>:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: {Ref: VpcAvailabilityZone<%= @num %>}
-      CidrBlock: {Ref: VpcPrivateSubnetCIDR<%= @num %>}
+      AvailabilityZone: {Ref: VpcAvailabilityZone1}
+      CidrBlock: {Ref: VpcPrivateSubnetCIDR1}
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
           Value:
             Fn::Join:
               - '-'
-              - [{Ref: 'AWS::StackName'}, 'private', {Ref: VpcAvailabilityZone<%= @num %>}]
+              - [{Ref: 'AWS::StackName'}, 'private', {Ref: VpcAvailabilityZone1}]
       VpcId: {Ref: VPC}
-<% end -%>
-
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: {Ref: VpcAvailabilityZone2}
+      CidrBlock: {Ref: VpcPrivateSubnetCIDR2}
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'private', {Ref: VpcAvailabilityZone2}]
+      VpcId: {Ref: VPC}
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
@@ -204,7 +190,6 @@ Resources:
       - Key: Name
         Value:
           Ref: AWS::StackName
-
   GatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
@@ -212,44 +197,8 @@ Resources:
         Ref: InternetGateway
       VpcId:
         Ref: VPC
-
-<% if @visibility === "internet-facing" -%>
-  ###### Public Routing ######
-  PublicRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      Tags:
-        - Key: Name
-          Value:
-            Fn::Join:
-              - '-'
-              - [{Ref: 'AWS::StackName'}, 'public']
-      VpcId:
-        Ref: VPC
-
-  PublicRoute:
-    Type: AWS::EC2::Route
-    Properties:
-      DestinationCidrBlock: 0.0.0.0/0
-      GatewayId:
-        Ref: InternetGateway
-      RouteTableId:
-        Ref: PublicRouteTable
-
-<% for @num in 1..@availability_zones -%>
-  PublicSubnetAssoc<%= @num %>:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId:
-        Ref: PublicRouteTable
-      SubnetId:
-        Ref: PublicSubnet<%= @num %>
-<% end -%>
-<% end -%>
-
   ###### Private Routing ######
-<% for @num in 1..@availability_zones -%>
-  PrivateRouteTable<%= @num %>:
+  PrivateRouteTable1:
     Type: AWS::EC2::RouteTable
     Properties:
       Tags:
@@ -257,46 +206,79 @@ Resources:
           Value:
             Fn::Join:
               - '-'
-              - [{Ref: 'AWS::StackName'}, 'private-<%= @num %>']
+              - [{Ref: 'AWS::StackName'}, 'private-1']
       VpcId:
         Ref: VPC
-
-  PrivateSubnetAssoc<%= @num %>:
+  PrivateSubnetAssoc1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       RouteTableId:
-        Ref: PrivateRouteTable<%= @num %>
+        Ref: PrivateRouteTable1
       SubnetId:
-        Ref: PrivateSubnet<%= @num %>
-
-  EIP<%= @num %>:
+        Ref: PrivateSubnet1
+  EIP1:
     Type: AWS::EC2::EIP
     Properties:
       Domain: vpc
-
-  NAT<%= @num %>:
+  NAT1:
     DependsOn: GatewayAttachment
     Type: AWS::EC2::NatGateway
     Properties:
       AllocationId:
         Fn::GetAtt:
-        - EIP<%= @num %>
+        - EIP1
         - AllocationId
       SubnetId:
-        Ref: PublicSubnet<%= @num %>
-
-  NATRoute<%= @num %>:
+        Ref: PublicSubnet1
+  NATRoute1:
     Type: AWS::EC2::Route
     Properties:
       RouteTableId:
-        Ref: PrivateRouteTable<%= @num %>
+        Ref: PrivateRouteTable1
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId:
-        Ref: NAT<%= @num %>
-<% end -%>
-
+        Ref: NAT1
+  PrivateRouteTable2:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'private-2']
+      VpcId:
+        Ref: VPC
+  PrivateSubnetAssoc2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId:
+        Ref: PrivateRouteTable2
+      SubnetId:
+        Ref: PrivateSubnet2
+  EIP2:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+  NAT2:
+    DependsOn: GatewayAttachment
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId:
+        Fn::GetAtt:
+        - EIP2
+        - AllocationId
+      SubnetId:
+        Ref: PublicSubnet2
+  NATRoute2:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId:
+        Ref: PrivateRouteTable2
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId:
+        Ref: NAT2
   ###### Roles ######
-
   RootEncryptionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -309,7 +291,6 @@ Resources:
             Action:
               - "sts:AssumeRole"
       Path: "/"
-
   LambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -332,7 +313,6 @@ Resources:
             Action:
             - logs:*
             Resource: arn:aws:logs:*:*:*
-
   SentryRole:
     Type: AWS::IAM::Role
     Properties:
@@ -361,9 +341,7 @@ Resources:
                     - ''
                     - - !GetAtt SentryFilesS3Bucket.Arn
                       - "/*"
-
   ###### Encryption ######
-
   SentryEncryptionKey:
     Type: "AWS::KMS::Key"
     Properties: 
@@ -414,7 +392,6 @@ Resources:
               - "kms:GenerateDataKey*"
               - "kms:DescribeKey"
             Resource: "*"
-
   SentryEncryptionKeyAlias:
     Type: AWS::KMS::Alias
     Properties:
@@ -424,7 +401,6 @@ Resources:
           - ['alias/', {Ref: 'AWS::StackName'}]
       TargetKeyId:
         Ref: SentryEncryptionKey
-
   EncryptionHelperFunction:
     Type: AWS::Lambda::Function
     Properties:
@@ -438,75 +414,58 @@ Resources:
           import urlparse
           import json
           import boto3
-
           def send_response(request, response, status=None, reason=None):
               """ Send our response to the pre-signed URL supplied by CloudFormation
-
               If no ResponseURL is found in the request, there is no place to send a
               response. This may be the case if the supplied event was for testing.
               """
-
               if status is not None:
                   response['Status'] = status
-
               if reason is not None:
                   response['Reason'] = reason
-
               if 'ResponseURL' in request and request['ResponseURL']:
                   url = urlparse.urlparse(request['ResponseURL'])
                   body = json.dumps(response)
                   https = httplib.HTTPSConnection(url.hostname)
                   https.request('PUT', url.path+'?'+url.query, body)
-
               return response
-
           def lambda_handler(event, context):
-
               response = {
                   'StackId': event['StackId'],
                   'RequestId': event['RequestId'],
                   'LogicalResourceId': event['LogicalResourceId'],
                   'Status': 'SUCCESS'
               }
-
               # PhysicalResourceId is meaningless here, but CloudFormation requires it
               if 'PhysicalResourceId' in event:
                   response['PhysicalResourceId'] = event['PhysicalResourceId']
               else:
                   response['PhysicalResourceId'] = str(uuid.uuid4())
-
               # There is nothing to do for a delete request
               if event['RequestType'] == 'Delete':
                   return send_response(event, response)
-
               # Encrypt the value using AWS KMS and return the response
               try:
-
                   for key in ['KeyId', 'PlainText']:
                       if key not in event['ResourceProperties'] or not event['ResourceProperties'][key]:
                           return send_response(
                               event, response, status='FAILED',
                               reason='The properties KeyId and PlainText must not be empty'
                           )
-
                   client = boto3.client('kms')
                   encrypted = client.encrypt(
                       KeyId=event['ResourceProperties']['KeyId'],
                       Plaintext=event['ResourceProperties']['PlainText']
                   )
-
                   response['Data'] = {
                       'CipherText': base64.b64encode(encrypted['CiphertextBlob'])
                   }
                   response['Reason'] = 'The value was successfully encrypted'
-
               except Exception as E:
                   response['Status'] = 'FAILED'
                   response['Reason'] = 'Encryption Failed - See CloudWatch logs for the Lamba function backing the custom resource for details'
-
               return send_response(event, response)
       Runtime: python2.7
-
   ###### Redis ######
   RedisAccessSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -520,7 +479,6 @@ Resources:
             Fn::Join:
               - '-'
               - [{Ref: 'AWS::StackName'}, 'RedisAccess']
-
   RedisSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -539,16 +497,13 @@ Resources:
             Fn::Join:
               - '-'
               - [{Ref: 'AWS::StackName'}, 'Redis']
-
   RedisSubnetGroup:
     Type: AWS::ElastiCache::SubnetGroup
     Properties:
       Description: Sentry stack redis subnet group
       SubnetIds:
-<% for @num in 1..@availability_zones -%>
-        - Ref: PrivateSubnet<%= @num %>
-<% end -%>
-
+        - Ref: PrivateSubnet1
+        - Ref: PrivateSubnet2
   RedisCacheCluster:
     Type: AWS::ElastiCache::CacheCluster
     Properties:
@@ -563,7 +518,6 @@ Resources:
         Ref: RedisNumNodes
       VpcSecurityGroupIds:
       - Ref: RedisSecurityGroup
-
   ###### Postgres ######
   PostgresAccessSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -577,7 +531,6 @@ Resources:
             Fn::Join:
               - '-'
               - [{Ref: 'AWS::StackName'}, 'PostgresAccess']
-
   PostgresSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -596,16 +549,13 @@ Resources:
             Fn::Join:
               - '-'
               - [{Ref: 'AWS::StackName'}, 'Postgres']
-
   PostgresSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
     Properties:
       DBSubnetGroupDescription: Sentry stack postgres subnet group
       SubnetIds:
-<% for @num in 1..@availability_zones -%>
-        - Ref: PrivateSubnet<%= @num %>
-<% end -%>
-
+        - Ref: PrivateSubnet1
+        - Ref: PrivateSubnet2
   PostgresInstance:
     Type: AWS::RDS::DBInstance
     Properties:
@@ -635,9 +585,7 @@ Resources:
       - Ref: PostgresSecurityGroup
       DBSubnetGroupName:
         Ref: PostgresSubnetGroup
-
   ###### File Storage ######
-
   SentryFilesS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -649,9 +597,7 @@ Resources:
           - Ref: AWS::StackName
           - "-sentry-files"
       AccessControl: Private
-
   ###### App Server ######
-
   LoadBalancerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -674,18 +620,12 @@ Resources:
             Fn::Join:
               - '-'
               - [{Ref: 'AWS::StackName'}, 'LoadBalancer']
-
   SentryElasticLoadBalancer:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
     Properties:
       Subnets:
-<% for @num in 1..@availability_zones -%>
-<% if @visibility === "internet-facing" -%>
-        - Ref: PublicSubnet<%= @num %>
-<% else -%>
-        - Ref: PrivateSubnet<%= @num %>
-<% end -%>
-<% end -%>
+        - Ref: PrivateSubnet1
+        - Ref: PrivateSubnet2
       Listeners:
       - InstancePort: '443'
         Protocol: HTTPS
@@ -736,14 +676,12 @@ Resources:
         Timeout: 5
         UnhealthyThreshold: 10
         Target: HTTPS:443/_health/
-
   SentryInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
       Path: "/"
       Roles:
         - Ref: SentryRole
-
   SentrySecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -762,7 +700,6 @@ Resources:
             Fn::Join:
               - '-'
               - [{Ref: 'AWS::StackName'}, 'Sentry']
-
   EncryptedDeploymentHosts:
     Type: AWS::CloudFormation::CustomResource
     Version: "1.0"
@@ -775,7 +712,6 @@ Resources:
         - |
           [aws]
           127.0.0.1
-
           [aws:vars]
           user=ubuntu
           owner="${Owner}"
@@ -802,7 +738,6 @@ Resources:
         - SentryUrl: !GetAtt SentryElasticLoadBalancer.DNSName
           DBHost: !GetAtt PostgresInstance.Endpoint.Address
           RedisHost: !GetAtt RedisCacheCluster.RedisEndpoint.Address
-
   SentryLaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
@@ -835,7 +770,6 @@ Resources:
             - base64 -d /tmp/hosts.decrypted > /tmp/sentry-formation-master/hosts
             - ansible-playbook /tmp/sentry-formation-master/site.yml -i /tmp/sentry-formation-master/hosts
           - DeploymentHosts: !GetAtt EncryptedDeploymentHosts.CipherText
-
   SentryAutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     UpdatePolicy:
@@ -858,10 +792,8 @@ Resources:
         Value:
           Ref: AWS::StackName
       VPCZoneIdentifier:
-<% for @num in 1..@availability_zones -%>
-        - Ref: PrivateSubnet<%= @num %>
-<% end -%>
-
+        - Ref: PrivateSubnet1
+        - Ref: PrivateSubnet2
   SentryScalingPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
     Properties:
