Keep public subnet groups for internal setups
- Still need to have access out from the EC2 boxes so they can fetch updates etc.
- Specify scheme of load balancer so it works for internal setups.

--- a/output/sentry-formation-internal-1az.yaml
+++ b/output/sentry-formation-internal-1az.yaml
@@ -72,6 +72,11 @@ Parameters:
     Description: The AvailabilityZone to use for subnet 1
     Type: AWS::EC2::AvailabilityZone::Name
     Default: eu-west-1a
+  VpcPublicSubnetCIDR1:
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
+    Default: 10.0.0.0/26
+    Description: VPC CIDR Block for Public Subnet 1
+    Type: String
   VpcPrivateSubnetCIDR1:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
     Default: 10.0.2.0/26
@@ -148,6 +153,19 @@ Resources:
         - Key: Name
           Value:
             Ref: AWS::StackName
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: {Ref: VpcAvailabilityZone1}
+      CidrBlock: {Ref: VpcPublicSubnetCIDR1}
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone1}]
+      VpcId: {Ref: VPC}
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
@@ -175,6 +193,33 @@ Resources:
         Ref: InternetGateway
       VpcId:
         Ref: VPC
+  ###### Public Routing ######
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'public']
+      VpcId:
+        Ref: VPC
+  PublicRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId:
+        Ref: InternetGateway
+      RouteTableId:
+        Ref: PublicRouteTable
+  PublicSubnetAssoc1:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId:
+        Ref: PublicRouteTable
+      SubnetId:
+        Ref: PublicSubnet1
   ###### Private Routing ######
   PrivateRouteTable1:
     Type: AWS::EC2::RouteTable
@@ -561,6 +606,7 @@ Resources:
     Properties:
       Subnets:
         - Ref: PrivateSubnet1
+      Scheme: internal
       Listeners:
       - InstancePort: '443'
         Protocol: HTTPS
