--- a/output/sentry-formation-internal-3az.yaml
+++ b/output/sentry-formation-internal-3az.yaml
@@ -80,6 +80,21 @@ Parameters:
     Description: The AvailabilityZone to use for subnet 3
     Type: AWS::EC2::AvailabilityZone::Name
     Default: eu-west-1c
+  VpcPublicSubnetCIDR1:
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
+    Default: 10.0.0.0/26
+    Description: VPC CIDR Block for Public Subnet 1
+    Type: String
+  VpcPublicSubnetCIDR2:
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
+    Default: 10.0.0.64/26
+    Description: VPC CIDR Block for Public Subnet 2
+    Type: String
+  VpcPublicSubnetCIDR3:
+    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
+    Default: 10.0.1.0/26
+    Description: VPC CIDR Block for Public Subnet 3
+    Type: String
   VpcPrivateSubnetCIDR1:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
     Default: 10.0.2.0/26
@@ -166,6 +181,45 @@ Resources:
         - Key: Name
           Value:
             Ref: AWS::StackName
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: {Ref: VpcAvailabilityZone1}
+      CidrBlock: {Ref: VpcPublicSubnetCIDR1}
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone1}]
+      VpcId: {Ref: VPC}
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: {Ref: VpcAvailabilityZone2}
+      CidrBlock: {Ref: VpcPublicSubnetCIDR2}
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone2}]
+      VpcId: {Ref: VPC}
+  PublicSubnet3:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: {Ref: VpcAvailabilityZone3}
+      CidrBlock: {Ref: VpcPublicSubnetCIDR3}
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'public', {Ref: VpcAvailabilityZone3}]
+      VpcId: {Ref: VPC}
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
@@ -219,6 +273,47 @@ Resources:
         Ref: InternetGateway
       VpcId:
         Ref: VPC
+  ###### Public Routing ######
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      Tags:
+        - Key: Name
+          Value:
+            Fn::Join:
+              - '-'
+              - [{Ref: 'AWS::StackName'}, 'public']
+      VpcId:
+        Ref: VPC
+  PublicRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId:
+        Ref: InternetGateway
+      RouteTableId:
+        Ref: PublicRouteTable
+  PublicSubnetAssoc1:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId:
+        Ref: PublicRouteTable
+      SubnetId:
+        Ref: PublicSubnet1
+  PublicSubnetAssoc2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId:
+        Ref: PublicRouteTable
+      SubnetId:
+        Ref: PublicSubnet2
+  PublicSubnetAssoc3:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      RouteTableId:
+        Ref: PublicRouteTable
+      SubnetId:
+        Ref: PublicSubnet3
   ###### Private Routing ######
   PrivateRouteTable1:
     Type: AWS::EC2::RouteTable
@@ -691,6 +786,7 @@ Resources:
         - Ref: PrivateSubnet1
         - Ref: PrivateSubnet2
         - Ref: PrivateSubnet3
+      Scheme: internal
       Listeners:
       - InstancePort: '443'
         Protocol: HTTPS
