--- a/output/sentry-formation-public-2az.yaml
+++ b/output/sentry-formation-public-2az.yaml
@@ -696,6 +696,7 @@ Resources:
       Subnets:
         - Ref: PublicSubnet1
         - Ref: PublicSubnet2
+      Scheme: internet-facing
       Listeners:
       - InstancePort: '443'
         Protocol: HTTPS
