--- a/output/sentry-formation-public-3az.yaml
+++ b/output/sentry-formation-public-3az.yaml
@@ -786,6 +786,7 @@ Resources:
         - Ref: PublicSubnet1
         - Ref: PublicSubnet2
         - Ref: PublicSubnet3
+      Scheme: internet-facing
       Listeners:
       - InstancePort: '443'
         Protocol: HTTPS
