--- a/output/sentry-formation-internal-1az.yaml
+++ b/output/sentry-formation-internal-1az.yaml
@@ -1,6 +1,6 @@
 # This file was generated with lono. Do not edit directly, the changes will be lost.
 # More info: https://github.com/tongueroo/lono
-Description: Sentry.io internal setup in only 1 availability zone
+Description: Sentry.io internal setup in 1 availability zones
 Parameters:
   #### Required ####
   Owner:
@@ -582,15 +582,6 @@ Resources:
   LoadBalancerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      SecurityGroupIngress:
-      - ToPort: '443'
-        IpProtocol: tcp
-        FromPort: '443'
-        CidrIp: 0.0.0.0/0
-      - ToPort: '443'
-        IpProtocol: tcp
-        FromPort: '443'
-        CidrIpv6: ::/0
       VpcId:
         Ref: VPC
       GroupDescription: An ELB group allowing access only to from the corresponding
