--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,14 @@ phases:
   build:
     commands:
       - lono generate
+  post_build:
+    commands:
+      - mkdir -p artifacts/latest
+      - mkdir -p "artifacts/$CODEBUILD_SOURCE_VERSION"
+      - cp output/* artifacts/latest
+      - cp output/* "artifacts/$CODEBUILD_SOURCE_VERSION"
+
 artifacts:
   files:
-    - output/*
+    - '**/*'
+  base-directory: artifacts
